samples/_failures_safe/1761460651_6f3561_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dcffa2ed.c:170: error: expected ‘;’, ‘,’ or ‘)’ at end of input
